--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -187,8 +187,45 @@ K2Node_CallFunction.Outputs=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
 Dash_bp_C.TransformCommon=True
+DJump_bp_C.Tick=True
+DJump_bp_C.Replication=True
+DJump_bp_C.Rendering=True
+DJump_bp_C.Collision=True
+DJump_bp_C.Actor=True
+DJump_bp_C.Input=True
+K2Node_InputAction.Input=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+K2Node_VariableGet.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+DJump_bp_C.TransformCommon=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/DJump_bp.DJump_bp;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Dash_bp.Dash_bp;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Statue.SM_Statue;
 RecentlyPlaced=/Script/Engine.PhysicsVolume;/Engine/Transient.ActorFactoryBoxVolume_9
@@ -205,6 +242,7 @@ Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.Collision
 StaticMeshActor=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/ThirdPersonBP/Blueprints/Dash_bp
+MRUItem0=/Game/ThirdPersonBP/Blueprints/DJump_bp
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/ThirdPersonBP/Blueprints/Dash_bp
 
