--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -99,6 +99,11 @@ SplineTangentScale=1.000000
 [MRU]
 MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -110,6 +115,9 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Dash_bp.Dash_bp
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/DJump_bp.DJump_bp
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Swim_bp.Swim_bp
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/SwimSphere_bp.SwimSphere_bp
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -223,12 +231,122 @@ K2Node_VariableGet.Events=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 DJump_bp_C.TransformCommon=True
+MeshMergeCullingVolume.TransformCommon=True
+MeshMergeCullingVolume.Warning=True
+MeshMergeCullingVolume.Collision=True
+MeshMergeCullingVolume.Navigation=True
+MeshMergeCullingVolume.Tags=True
+MeshMergeCullingVolume.Cooking=True
+MeshMergeCullingVolume.BrushSettings=True
+MeshMergeCullingVolume.Replication=True
+MeshMergeCullingVolume.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+Swim_bp_C.Tick=True
+Swim_bp_C.Replication=True
+Swim_bp_C.Rendering=True
+Swim_bp_C.Collision=True
+Swim_bp_C.Actor=True
+Swim_bp_C.Input=True
+Swim_bp_C.TransformCommon=True
+Actor.TransformCommon=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.Actor=True
+SwimSphere_bp_C.Tick=True
+SwimSphere_bp_C.Actor=True
+SwimSphere_bp_C.Replication=True
+SwimSphere_bp_C.Rendering=True
+SwimSphere_bp_C.Collision=True
+SwimSphere_bp_C.Input=True
+RadialForceComponent.TransformCommon=True
+RadialForceComponent.RadialForceComponent=True
+RadialForceComponent.Impulse=True
+RadialForceComponent.Force=True
+RadialForceComponent.Destructible=True
+RadialForceComponent.Rendering=True
+RadialForceComponent.Tags=True
+RadialForceComponent.ComponentReplication=True
+RadialForceComponent.Activation=True
+RadialForceComponent.Variable=True
+RadialForceComponent.Cooking=True
+SwimSphere_bp_C.Cooking=True
+SwimSphere_bp_C.Tags=True
+SwimSphere_bp_C.VirtualTexture=True
+SwimSphere_bp_C.Navigation=True
+SwimSphere_bp_C.Lighting=True
+SwimSphere_bp_C.Physics=True
+SwimSphere_bp_C.Materials=True
+SwimSphere_bp_C.StaticMesh=True
+SwimSphere_bp_C.TransformCommon=True
+RadialForceComponent.Sockets=True
+RadialForceComponent.ComponentTick=True
+RadialForceComponent.Events=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+RadialForceActor.Actor=True
+RadialForceActor.Replication=True
+RadialForceActor.Cooking=True
+RadialForceActor.Activation=True
+RadialForceActor.Tags=True
+RadialForceActor.Rendering=True
+RadialForceActor.Destructible=True
+RadialForceActor.Force=True
+RadialForceActor.Impulse=True
+RadialForceActor.RadialForceComponent=True
+RadialForceActor.TransformCommon=True
+SwimSphere_bp_C.Default=True
+PropertyWrapper.Events=True
+K2Node_VariableSet.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.RadialForceActor;
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Swim_bp.Swim_bp;
+RecentlyPlaced=/Script/Engine.PhysicsVolume;/Engine/Transient.ActorFactoryBoxVolume_9
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.MeshMergeCullingVolume;/Engine/Transient.ActorFactoryBoxVolume_15
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/DJump_bp.DJump_bp;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Dash_bp.Dash_bp;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Statue.SM_Statue;
-RecentlyPlaced=/Script/Engine.PhysicsVolume;/Engine/Transient.ActorFactoryBoxVolume_9
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
 
 [PluginBrowser]
@@ -239,10 +357,125 @@ InstalledPlugins=XRVisualization
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMeshActor=
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshMergeCullingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+SwimSphere_bp_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+Object=
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent=
+CharacterMovementComponent=
+PawnMovementComponent=
+NavMovementComponent=
+MovementComponent=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/DJump_bp
-MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem2=/Game/ThirdPersonBP/Blueprints/Dash_bp
+MRUItem0=/Game/ThirdPersonBP/Blueprints/SwimSphere_bp
+MRUItem1=/Game/ThirdPersonBP/Blueprints/Swim_bp
+MRUItem2=/Game/StarterContent/Materials/M_Water_Lake
+MRUItem3=/Game/ThirdPersonBP/Blueprints/DJump_bp
+MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem5=/Game/ThirdPersonBP/Blueprints/Dash_bp
+
+[AssetEditorToolkitTabLocation]
+/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=0
+/Game/ThirdPersonBP/Blueprints/SwimSphere_bp.SwimSphere_bp=0
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
