--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -525,7 +525,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1283.200 Y=723.200
+WindowSize=X=1284.800 Y=724.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1380,4 +1380,6 @@ BlueprintGraph.TimeStamp=2021.01.21-05.21.21
 BlueprintGraph.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2021.01.21-05.21.47
 MaterialEditor.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2021.01.21-05.22.13
+UATHelper.LastCompileMethod=Unknown
 
