made the swinging mechanic and it nearly killed me

--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -160,9 +160,11 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/HookPoint.HookPoint
 OpenAssetsAtExit=/Game/CustomMaterials/HookMaterial.HookMaterial
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/DJump_bp.DJump_bp
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Grapple_bp.Grapple_bp
 OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin
@@ -730,8 +732,37 @@ SkeletalMeshComponent.ComponentReplication=True
 SkeletalMeshComponent.Activation=True
 SkeletalMeshComponent.Cooking=True
 SkeletalMeshComponent.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+Grapple_bp_C.Tick=True
+Grapple_bp_C.Replication=True
+Grapple_bp_C.Rendering=True
+Grapple_bp_C.Collision=True
+Grapple_bp_C.Actor=True
+Grapple_bp_C.Input=True
+StaticMeshSimulationComponent.Variable=True
+StaticMeshSimulationComponent.Warning=True
+StaticMeshSimulationComponent.Sockets=True
+StaticMeshSimulationComponent.ChaosPhysics=True
+StaticMeshSimulationComponent.ComponentTick=True
+StaticMeshSimulationComponent.Tags=True
+StaticMeshSimulationComponent.ComponentReplication=True
+StaticMeshSimulationComponent.Activation=True
+StaticMeshSimulationComponent.Cooking=True
+StaticMeshSimulationComponent.Events=True
+Grapple_bp_C.TransformCommon=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Grapple_bp.Grapple_bp;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/HookPoint.HookPoint;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Soul1.Soul1;
 RecentlyPlaced=/Script/Engine.RadialForceActor;
@@ -752,7 +783,7 @@ InstalledPlugins=XRVisualization
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshActor=
 MeshMergeCullingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SwimSphere_bp_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMeshComponent=
@@ -770,27 +801,29 @@ MovementComponent=
 CableComponent=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+CapsuleComponent=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem1=/Game/Mannequin/Character/Mesh/SK_Mannequin
-MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/ThirdPersonBP/Blueprints/SoulBase
-MRUItem4=/Game/ThirdPersonBP/Blueprints/Soul1
-MRUItem5=/Game/ThirdPersonBP/Blueprints/Soul3
-MRUItem6=/Game/ThirdPersonBP/Blueprints/Soul2
-MRUItem7=/Game/CustomMaterials/SoulMat3
-MRUItem8=/Game/CustomMaterials/SoulMat2
-MRUItem9=/Game/CustomMaterials/SoulMat1
-MRUItem10=/Game/CustomMaterials/HookMaterial
-MRUItem11=/Game/ThirdPersonBP/Blueprints/HookPoint
-MRUItem12=/Game/ThirdPersonBP/Blueprints/SwimSphere_bp
-MRUItem13=/Game/ThirdPersonBP/Blueprints/Swim_bp
-MRUItem14=/Game/StarterContent/Materials/M_Water_Lake
-MRUItem15=/Game/ThirdPersonBP/Blueprints/DJump_bp
-MRUItem16=/Game/ThirdPersonBP/Blueprints/Dash_bp
+MRUItem0=/Game/ThirdPersonBP/Blueprints/Grapple_bp
+MRUItem1=/Game/ThirdPersonBP/Blueprints/DJump_bp
+MRUItem2=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem3=/Game/Mannequin/Character/Mesh/SK_Mannequin
+MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem5=/Game/ThirdPersonBP/Blueprints/SoulBase
+MRUItem6=/Game/ThirdPersonBP/Blueprints/Soul1
+MRUItem7=/Game/ThirdPersonBP/Blueprints/Soul3
+MRUItem8=/Game/ThirdPersonBP/Blueprints/Soul2
+MRUItem9=/Game/CustomMaterials/SoulMat3
+MRUItem10=/Game/CustomMaterials/SoulMat2
+MRUItem11=/Game/CustomMaterials/SoulMat1
+MRUItem12=/Game/CustomMaterials/HookMaterial
+MRUItem13=/Game/ThirdPersonBP/Blueprints/HookPoint
+MRUItem14=/Game/ThirdPersonBP/Blueprints/SwimSphere_bp
+MRUItem15=/Game/ThirdPersonBP/Blueprints/Swim_bp
+MRUItem16=/Game/StarterContent/Materials/M_Water_Lake
+MRUItem17=/Game/ThirdPersonBP/Blueprints/Dash_bp
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=0
@@ -899,7 +932,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1284.800 Y=724.800
+WindowSize=X=1286.400 Y=726.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1756,6 +1789,12 @@ MaterialEditor.TimeStamp=2021.01.21-05.21.47
 MaterialEditor.LastCompileMethod=Unknown
 UATHelper.TimeStamp=2021.01.21-05.22.13
 UATHelper.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2021.01.21-05.21.35
+ExternalImagePicker.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2021.01.21-05.22.06
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2021.01.21-05.21.56
+PinnedCommandList.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1794,6 +1833,8 @@ ThirdPersonCharacter_C=
 K2Node_VariableSet=CableComponent.Collision.Collision,
 K2Node_VariableGet=CableComponent.Collision.Collision,
 PropertyWrapper=CableComponent.Collision.Collision,
+CharacterMovementComponent=
+HookPoint_C=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1867,4 +1908,10 @@ WmfMediaSettings=True
 
 [DetailCategoriesAdvanced]
 CableComponent.Cable=True
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletonEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletalMeshEditor",Commands=)
 
