--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,7 +129,8 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem1=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
+MRUItem1=/Game/Tutorial
+MRUItem2=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -164,6 +165,7 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -832,6 +834,7 @@ PointLight.Cooking=True
 PointLight.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/DJump_bp.DJump_bp;
 RecentlyPlaced=/Game/StarterContent/Textures/a7e10816-0ca9-4268-a947-a5fa8a7187d9_930871_TABLET_LANDSCAPE_LARGE_16_9__2_.a7e10816-0ca9-4268-a947-a5fa8a7187d9_930871_TABLET_LANDSCAPE_LARGE_16_9__2_;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Textures/T_Ground_Gravel_D.T_Ground_Gravel_D;
@@ -851,7 +854,6 @@ RecentlyPlaced=/Game/StarterContent/Textures/T_Frame_M.T_Frame_M;
 RecentlyPlaced=/Game/CustomMaterials/HookMaterial.HookMaterial;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Torus.Shape_Torus;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
-RecentlyPlaced=/Game/Geometry/Meshes/CubeMaterial.CubeMaterial;
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -886,25 +888,25 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/StarterContent/Textures/a7e10816-0ca9-4268-a947-a5fa8a7187d9_930871_TABLET_LANDSCAPE_LARGE_16_9__2_
-MRUItem2=/Game/StarterContent/Textures/NewPaperSprite
-MRUItem3=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
-MRUItem4=/Game/ThirdPersonBP/Blueprints/Grapple_bp
-MRUItem5=/Game/ThirdPersonBP/Blueprints/DJump_bp
-MRUItem6=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem7=/Game/Mannequin/Character/Mesh/SK_Mannequin
-MRUItem8=/Game/ThirdPersonBP/Blueprints/SoulBase
-MRUItem9=/Game/ThirdPersonBP/Blueprints/Soul1
-MRUItem10=/Game/ThirdPersonBP/Blueprints/Soul3
-MRUItem11=/Game/ThirdPersonBP/Blueprints/Soul2
-MRUItem12=/Game/CustomMaterials/SoulMat3
-MRUItem13=/Game/CustomMaterials/SoulMat2
-MRUItem14=/Game/CustomMaterials/SoulMat1
-MRUItem15=/Game/CustomMaterials/HookMaterial
-MRUItem16=/Game/ThirdPersonBP/Blueprints/HookPoint
-MRUItem17=/Game/ThirdPersonBP/Blueprints/SwimSphere_bp
-MRUItem18=/Game/ThirdPersonBP/Blueprints/Swim_bp
-MRUItem19=/Game/StarterContent/Materials/M_Water_Lake
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/Tutorial
+MRUItem3=/Game/StarterContent/Textures/a7e10816-0ca9-4268-a947-a5fa8a7187d9_930871_TABLET_LANDSCAPE_LARGE_16_9__2_
+MRUItem4=/Game/StarterContent/Textures/NewPaperSprite
+MRUItem5=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
+MRUItem6=/Game/ThirdPersonBP/Blueprints/Grapple_bp
+MRUItem7=/Game/ThirdPersonBP/Blueprints/DJump_bp
+MRUItem8=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem9=/Game/Mannequin/Character/Mesh/SK_Mannequin
+MRUItem10=/Game/ThirdPersonBP/Blueprints/SoulBase
+MRUItem11=/Game/ThirdPersonBP/Blueprints/Soul1
+MRUItem12=/Game/ThirdPersonBP/Blueprints/Soul3
+MRUItem13=/Game/ThirdPersonBP/Blueprints/Soul2
+MRUItem14=/Game/CustomMaterials/SoulMat3
+MRUItem15=/Game/CustomMaterials/SoulMat2
+MRUItem16=/Game/CustomMaterials/SoulMat1
+MRUItem17=/Game/CustomMaterials/HookMaterial
+MRUItem18=/Game/ThirdPersonBP/Blueprints/HookPoint
+MRUItem19=/Game/ThirdPersonBP/Blueprints/SwimSphere_bp
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=0
