--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -165,7 +165,9 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Grapple_bp.Grapple_bp
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/DJump_bp.DJump_bp
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Dash_bp.Dash_bp
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -832,6 +834,32 @@ PointLight.RayTracing=True
 PointLight.Tags=True
 PointLight.Cooking=True
 PointLight.Actor=True
+TextRenderComponent.Variable=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Sockets=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.ComponentTick=True
+TextRenderComponent.Navigation=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.Tags=True
+TextRenderComponent.ComponentReplication=True
+TextRenderComponent.Cooking=True
+TextRenderComponent.Events=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/DJump_bp.DJump_bp;
@@ -887,26 +915,26 @@ CapsuleComponent=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/Tutorial
-MRUItem3=/Game/StarterContent/Textures/a7e10816-0ca9-4268-a947-a5fa8a7187d9_930871_TABLET_LANDSCAPE_LARGE_16_9__2_
-MRUItem4=/Game/StarterContent/Textures/NewPaperSprite
-MRUItem5=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
-MRUItem6=/Game/ThirdPersonBP/Blueprints/Grapple_bp
-MRUItem7=/Game/ThirdPersonBP/Blueprints/DJump_bp
-MRUItem8=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem9=/Game/Mannequin/Character/Mesh/SK_Mannequin
-MRUItem10=/Game/ThirdPersonBP/Blueprints/SoulBase
-MRUItem11=/Game/ThirdPersonBP/Blueprints/Soul1
-MRUItem12=/Game/ThirdPersonBP/Blueprints/Soul3
-MRUItem13=/Game/ThirdPersonBP/Blueprints/Soul2
-MRUItem14=/Game/CustomMaterials/SoulMat3
-MRUItem15=/Game/CustomMaterials/SoulMat2
-MRUItem16=/Game/CustomMaterials/SoulMat1
-MRUItem17=/Game/CustomMaterials/HookMaterial
-MRUItem18=/Game/ThirdPersonBP/Blueprints/HookPoint
-MRUItem19=/Game/ThirdPersonBP/Blueprints/SwimSphere_bp
+MRUItem0=/Game/ThirdPersonBP/Blueprints/Dash_bp
+MRUItem1=/Game/ThirdPersonBP/Blueprints/DJump_bp
+MRUItem2=/Game/ThirdPersonBP/Blueprints/Grapple_bp
+MRUItem3=/Game/ThirdPersonBP/Blueprints/Soul1
+MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem5=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem6=/Game/Tutorial
+MRUItem7=/Game/StarterContent/Textures/a7e10816-0ca9-4268-a947-a5fa8a7187d9_930871_TABLET_LANDSCAPE_LARGE_16_9__2_
+MRUItem8=/Game/StarterContent/Textures/NewPaperSprite
+MRUItem9=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
+MRUItem10=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem11=/Game/Mannequin/Character/Mesh/SK_Mannequin
+MRUItem12=/Game/ThirdPersonBP/Blueprints/SoulBase
+MRUItem13=/Game/ThirdPersonBP/Blueprints/Soul3
+MRUItem14=/Game/ThirdPersonBP/Blueprints/Soul2
+MRUItem15=/Game/CustomMaterials/SoulMat3
+MRUItem16=/Game/CustomMaterials/SoulMat2
+MRUItem17=/Game/CustomMaterials/SoulMat1
+MRUItem18=/Game/CustomMaterials/HookMaterial
+MRUItem19=/Game/ThirdPersonBP/Blueprints/HookPoint
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=0
@@ -1920,6 +1948,7 @@ PropertyWrapper=CableComponent.Collision.Collision,
 CharacterMovementComponent=
 HookPoint_C=
 Dash_16=CableComponent.Collision.Collision,
+Grapple_bp_C=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1999,4 +2028,9 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletalMeshEditor",Commands=)
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
 
