--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,9 +129,13 @@ CurrentRotGridSize=0
 CameraSpeed=6
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem1=/Game/Tutorial
-MRUItem2=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
+MRUItem0=/Game/ThirdPersonBP/Maps/Building
+MRUItem1=/Game/ThirdPersonBP/Maps/Water
+MRUItem2=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem5=/Game/Tutorial
+MRUItem6=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -160,13 +164,14 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/ThirdPersonBP/Maps/Building
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -833,6 +838,13 @@ PointLight.RayTracing=True
 PointLight.Tags=True
 PointLight.Cooking=True
 PointLight.Actor=True
+Actor.Rendering=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/DJump_bp.DJump_bp;
@@ -888,26 +900,26 @@ CapsuleComponent=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/ThirdPersonBP/Maps/Mountain
 MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/Tutorial
-MRUItem3=/Game/StarterContent/Textures/a7e10816-0ca9-4268-a947-a5fa8a7187d9_930871_TABLET_LANDSCAPE_LARGE_16_9__2_
-MRUItem4=/Game/StarterContent/Textures/NewPaperSprite
-MRUItem5=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
-MRUItem6=/Game/ThirdPersonBP/Blueprints/Grapple_bp
-MRUItem7=/Game/ThirdPersonBP/Blueprints/DJump_bp
-MRUItem8=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem9=/Game/Mannequin/Character/Mesh/SK_Mannequin
-MRUItem10=/Game/ThirdPersonBP/Blueprints/SoulBase
-MRUItem11=/Game/ThirdPersonBP/Blueprints/Soul1
-MRUItem12=/Game/ThirdPersonBP/Blueprints/Soul3
-MRUItem13=/Game/ThirdPersonBP/Blueprints/Soul2
-MRUItem14=/Game/CustomMaterials/SoulMat3
-MRUItem15=/Game/CustomMaterials/SoulMat2
-MRUItem16=/Game/CustomMaterials/SoulMat1
-MRUItem17=/Game/CustomMaterials/HookMaterial
-MRUItem18=/Game/ThirdPersonBP/Blueprints/HookPoint
-MRUItem19=/Game/ThirdPersonBP/Blueprints/SwimSphere_bp
+MRUItem2=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem3=/Game/Tutorial
+MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem5=/Game/StarterContent/Textures/a7e10816-0ca9-4268-a947-a5fa8a7187d9_930871_TABLET_LANDSCAPE_LARGE_16_9__2_
+MRUItem6=/Game/StarterContent/Textures/NewPaperSprite
+MRUItem7=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
+MRUItem8=/Game/ThirdPersonBP/Blueprints/Grapple_bp
+MRUItem9=/Game/ThirdPersonBP/Blueprints/DJump_bp
+MRUItem10=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem11=/Game/Mannequin/Character/Mesh/SK_Mannequin
+MRUItem12=/Game/ThirdPersonBP/Blueprints/SoulBase
+MRUItem13=/Game/ThirdPersonBP/Blueprints/Soul1
+MRUItem14=/Game/ThirdPersonBP/Blueprints/Soul3
+MRUItem15=/Game/ThirdPersonBP/Blueprints/Soul2
+MRUItem16=/Game/CustomMaterials/SoulMat3
+MRUItem17=/Game/CustomMaterials/SoulMat2
+MRUItem18=/Game/CustomMaterials/SoulMat1
+MRUItem19=/Game/CustomMaterials/HookMaterial
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=0
