--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,11 +134,11 @@ CameraSpeed=5
 
 [MRU]
 MRUItem0=/Game/ThirdPersonBP/Maps/Building
-MRUItem1=/Game/Tutorial
-MRUItem2=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem5=/Game/ThirdPersonBP/Maps/Main
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/ThirdPersonBP/Maps/Main
+MRUItem3=/Game/Tutorial
+MRUItem4=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem5=/Game/ThirdPersonBP/Maps/TutorialLvl
 MRUItem6=/Game/ThirdPersonBP/Maps/Water
 MRUItem7=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
 
@@ -147,7 +147,7 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/CustomMaterials
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=False
@@ -1123,8 +1123,46 @@ Actor_Blueprint1_C.Collision=True
 Actor_Blueprint1_C.Input=True
 Actor_Blueprint1_C.Actor=True
 Actor_Blueprint1_C.Tick=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Materials=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Navigation=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+Cube74_Blueprint_C.TransformCommon=True
+Cube74_Blueprint_C.StaticMesh=True
+Cube74_Blueprint_C.Materials=True
+Cube74_Blueprint_C.Physics=True
+Cube74_Blueprint_C.Collision=True
+Cube74_Blueprint_C.Lighting=True
+Cube74_Blueprint_C.Rendering=True
+Cube74_Blueprint_C.Navigation=True
+Cube74_Blueprint_C.VirtualTexture=True
+Cube74_Blueprint_C.Tags=True
+Cube74_Blueprint_C.Cooking=True
+Cube74_Blueprint_C.Replication=True
+Cube74_Blueprint_C.Input=True
+Cube74_Blueprint_C.Actor=True
+Cube74_Blueprint_C.Tick=True
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/CustomMaterials/SoulMat3.SoulMat3;
+RecentlyPlaced=/Game/CustomMaterials/SoulMat1.SoulMat1;
+RecentlyPlaced=/Game/CustomMaterials/HookMaterial.HookMaterial;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Hex_Tile_M.T_Tech_Hex_Tile_M;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_M.T_Tech_Dot_M;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_N.T_Tech_Dot_N;
+RecentlyPlaced=/Game/StarterContent/Textures/T_TableRound_M_Mat.T_TableRound_M_Mat;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Poured_D.T_Concrete_Poured_D;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Stairs.SM_Stairs;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Classic_chair.SM_Classic_chair;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Explosion.P_Explosion;
@@ -1134,17 +1172,6 @@ RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Modern_Chair_1.SM_Modern_Chair_1;
 RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Bed_Table.SM_Bed_Table;
 RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Coffee_Table.SM_Coffee_Table;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Stairs.SM_Stairs;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Poured_D.T_Concrete_Poured_D;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/CustomMaterials/SoulMat3.SoulMat3;
-RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/CustomMaterials/SoulMat2.SoulMat2;
-RecentlyPlaced=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin;
-RecentlyPlaced=/Game/Mannequin/Character/Mesh/SK_Mannequin_Female.SK_Mannequin_Female;
-RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
-RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Classic_table.SM_Classic_table;
-RecentlyPlaced=/Game/StarterContent/Props/SM_TableRound.SM_TableRound;
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -1186,26 +1213,26 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/StarterContent/Particles/Actor_Blueprint1
-MRUItem2=/Game/StarterContent/Particles/Actor_Blueprint
-MRUItem3=/Game/CustomMaterials/Actor_Blueprint
-MRUItem4=/Game/FreeFurniturePack/Character_Blueprint
-MRUItem5=/Game/ThirdPersonBP/Maps/Building
-MRUItem6=/Game/Actor_Blueprint
-MRUItem7=/Game/SM_DoorFrame_Blueprint
-MRUItem8=/Game/Tutorial
-MRUItem9=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem10=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem11=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem12=/Game/ThirdPersonBP/Maps/Main
-MRUItem13=/Game/ThirdPersonBP/Blueprints/PauseMenu
-MRUItem14=/Game/ThirdPersonBP/Blueprints/MainMenu
-MRUItem15=/Game/ThirdPersonBP/Maps/Water
-MRUItem16=/Game/ThirdPersonBP/Blueprints/SoulBase
-MRUItem17=/Game/StarterContent/Textures/a7e10816-0ca9-4268-a947-a5fa8a7187d9_930871_TABLET_LANDSCAPE_LARGE_16_9__2_
-MRUItem18=/Game/StarterContent/Textures/NewPaperSprite
-MRUItem19=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
+MRUItem0=/Game/ThirdPersonBP/Maps/Building
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/StarterContent/Textures/Cube74_Blueprint
+MRUItem3=/Game/ThirdPersonBP/Maps/Main
+MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem5=/Game/StarterContent/Particles/Actor_Blueprint1
+MRUItem6=/Game/StarterContent/Particles/Actor_Blueprint
+MRUItem7=/Game/CustomMaterials/Actor_Blueprint
+MRUItem8=/Game/FreeFurniturePack/Character_Blueprint
+MRUItem9=/Game/Actor_Blueprint
+MRUItem10=/Game/SM_DoorFrame_Blueprint
+MRUItem11=/Game/Tutorial
+MRUItem12=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem13=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem14=/Game/ThirdPersonBP/Blueprints/PauseMenu
+MRUItem15=/Game/ThirdPersonBP/Blueprints/MainMenu
+MRUItem16=/Game/ThirdPersonBP/Maps/Water
+MRUItem17=/Game/ThirdPersonBP/Blueprints/SoulBase
+MRUItem18=/Game/StarterContent/Textures/a7e10816-0ca9-4268-a947-a5fa8a7187d9_930871_TABLET_LANDSCAPE_LARGE_16_9__2_
+MRUItem19=/Game/StarterContent/Textures/NewPaperSprite
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=0
