--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,9 +133,9 @@ CurrentRotGridSize=0
 CameraSpeed=5
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem1=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem2=/Game/ThirdPersonBP/Maps/Building
+MRUItem0=/Game/ThirdPersonBP/Maps/Building
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/ThirdPersonBP/Maps/Mountain
 MRUItem3=/Game/ThirdPersonBP/Maps/Main
 MRUItem4=/Game/Tutorial
 MRUItem5=/Game/ThirdPersonBP/Maps/TutorialLvl
@@ -175,13 +175,11 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/ThirdPersonBP/Maps/Building
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Respawn_bp.Respawn_bp
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode
+CleanShutdown=False
+OpenAssetsAtExit=/Game/StarterContent/Particles/Actor_Blueprint.Actor_Blueprint
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1179,11 +1177,15 @@ ThirdPersonGameMode_C.Game=True
 ThirdPersonGameMode_C.GameMode=True
 Soul2_C.Default=True
 Soul3_C.Default=True
+ThirdPersonExampleMap_C.Default=True
+Building_C.Default=True
+MeshProxySettingsObject.ProxySettings=True
+MeshInstancingSettingsObject.Instancing=True
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Respawn_bp.Respawn_bp;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/CustomMaterials/SoulMat3.SoulMat3;
 RecentlyPlaced=/Game/CustomMaterials/SoulMat1.SoulMat1;
 RecentlyPlaced=/Game/CustomMaterials/HookMaterial.HookMaterial;
@@ -1242,26 +1244,26 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem1=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem0=/Game/StarterContent/Particles/Actor_Blueprint
+MRUItem1=/Game/ThirdPersonBP/Blueprints/Soul2
 MRUItem2=/Game/ThirdPersonBP/Maps/Building
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem4=/Game/ThirdPersonBP/Blueprints/Respawn_bp
-MRUItem5=/Game/ThirdPersonBP/Maps/Main
-MRUItem6=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem7=/Game/StarterContent/Textures/Cube74_Blueprint
-MRUItem8=/Game/StarterContent/Particles/Actor_Blueprint1
-MRUItem9=/Game/StarterContent/Particles/Actor_Blueprint
-MRUItem10=/Game/CustomMaterials/Actor_Blueprint
-MRUItem11=/Game/FreeFurniturePack/Character_Blueprint
-MRUItem12=/Game/Actor_Blueprint
-MRUItem13=/Game/SM_DoorFrame_Blueprint
-MRUItem14=/Game/Tutorial
-MRUItem15=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem16=/Game/ThirdPersonBP/Blueprints/PauseMenu
-MRUItem17=/Game/ThirdPersonBP/Blueprints/MainMenu
-MRUItem18=/Game/ThirdPersonBP/Maps/Water
-MRUItem19=/Game/ThirdPersonBP/Blueprints/SoulBase
+MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem4=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem6=/Game/ThirdPersonBP/Blueprints/Respawn_bp
+MRUItem7=/Game/ThirdPersonBP/Maps/Main
+MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem9=/Game/StarterContent/Textures/Cube74_Blueprint
+MRUItem10=/Game/StarterContent/Particles/Actor_Blueprint1
+MRUItem11=/Game/CustomMaterials/Actor_Blueprint
+MRUItem12=/Game/FreeFurniturePack/Character_Blueprint
+MRUItem13=/Game/Actor_Blueprint
+MRUItem14=/Game/SM_DoorFrame_Blueprint
+MRUItem15=/Game/Tutorial
+MRUItem16=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem17=/Game/ThirdPersonBP/Blueprints/PauseMenu
+MRUItem18=/Game/ThirdPersonBP/Blueprints/MainMenu
+MRUItem19=/Game/ThirdPersonBP/Maps/Water
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=0
@@ -1276,6 +1278,7 @@ MRUItem19=/Game/ThirdPersonBP/Blueprints/SoulBase
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 /Game/ThirdPersonBP/Maps/TutorialLvl_BuiltData.TutorialLvl_BuiltData=0
 /Game/SM_DoorFrame_Blueprint.SM_DoorFrame_Blueprint=1
+/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.ThirdPersonExampleMap=1
 
 [MaterialEditor]
 PrimType=1
@@ -1373,7 +1376,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1292.800 Y=732.800
+WindowSize=X=1292.000 Y=732.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
