--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1254,12 +1254,12 @@ Image="\"Object.Appearance.Brush\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 SkyLight="\"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint\" "
-Info="\"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint\" "
+Info=
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem1=/Game/ThirdPersonBP/Blueprints/Soul3
-MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/ThirdPersonBP/Blueprints/Soul3
 MRUItem3=/Game/ThirdPersonBP/Maps/TutorialLvl
 MRUItem4=/Game/ThirdPersonBP/Maps/Main
 MRUItem5=/Engine/EngineSky/C_Sky_Zenith_Color
