Finished Main Room Section
Added all the obstacles for the ravine, also made it deeper and look a little better

--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,8 +133,8 @@ CurrentRotGridSize=0
 CameraSpeed=5
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem1=/Game/ThirdPersonBP/Maps/Water
+MRUItem0=/Game/ThirdPersonBP/Maps/Water
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/ThirdPersonBP/Maps/Building
 MRUItem3=/Game/ThirdPersonBP/Maps/Mountain
 MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
@@ -175,17 +175,11 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/ThirdPersonBP/Maps/Water
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Respawn_bp.Respawn_bp
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/DJump_bp.DJump_bp
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Grapple_bp.Grapple_bp
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Dash_bp.Dash_bp
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Swim_bp.Swim_bp
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1198,26 +1192,26 @@ Soul1_C.Default=True
 K2Node_InputAxisEvent.Input=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_Mat.T_Rock_Basalt_Mat;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Wood_Oak_D.T_Wood_Oak_D;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_Mat.T_Rock_Basalt_Mat;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_D.T_Rock_Basalt_D;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_Mat.T_Tech_Dot_Mat;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Gradinet_01_Mat.T_Gradinet_01_Mat;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Gradinet_01.T_Gradinet_01;
+RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Sandstone_D.T_Rock_Sandstone_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Perlin_Noise_M.T_Perlin_Noise_M;
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Respawn_bp.Respawn_bp;
 RecentlyPlaced=/Game/CustomMaterials/SoulMat3.SoulMat3;
 RecentlyPlaced=/Game/CustomMaterials/SoulMat1.SoulMat1;
 RecentlyPlaced=/Game/CustomMaterials/HookMaterial.HookMaterial;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Hex_Tile_M.T_Tech_Hex_Tile_M;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_M.T_Tech_Dot_M;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_N.T_Tech_Dot_N;
-RecentlyPlaced=/Game/StarterContent/Textures/T_TableRound_M_Mat.T_TableRound_M_Mat;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Poured_D.T_Concrete_Poured_D;
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -1261,15 +1255,15 @@ SkyLight="\"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.Occ
 Info=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/Swim_bp
-MRUItem1=/Game/ThirdPersonBP/Blueprints/Dash_bp
-MRUItem2=/Game/ThirdPersonBP/Blueprints/Grapple_bp
-MRUItem3=/Game/ThirdPersonBP/Blueprints/DJump_bp
-MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem6=/Game/ThirdPersonBP/Blueprints/Respawn_bp
-MRUItem7=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem8=/Game/ThirdPersonBP/Maps/Water
+MRUItem0=/Game/ThirdPersonBP/Maps/Water
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/ThirdPersonBP/Blueprints/Respawn_bp
+MRUItem3=/Game/ThirdPersonBP/Blueprints/Swim_bp
+MRUItem4=/Game/ThirdPersonBP/Blueprints/Dash_bp
+MRUItem5=/Game/ThirdPersonBP/Blueprints/Grapple_bp
+MRUItem6=/Game/ThirdPersonBP/Blueprints/DJump_bp
+MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
 MRUItem9=/Game/ThirdPersonBP/Maps/Building
 MRUItem10=/Game/ThirdPersonBP/Maps/Mountain
 MRUItem11=/Game/ThirdPersonBP/Blueprints/Soul3
