--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1189,20 +1189,26 @@ Brush.Surface Properties=True
 SoulBase_C.Default=True
 Soul1_C.Default=True
 K2Node_InputAxisEvent.Input=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Mobile=True
+StaticMeshActor.AssetUserData=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Mobile=True
+StaticMeshComponent.AssetUserData=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_Mat.T_Rock_Basalt_Mat;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Rock/T_Cave_Rock_Large02_M.T_Cave_Rock_Large02_M;
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Water/T_waternormal_Mat.T_waternormal_Mat;
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Water/T_WaterStream0002_2_Mat.T_WaterStream0002_2_Mat;
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Water/T_Soul_Water01_N.T_Soul_Water01_N;
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Water/T_waternormal_N.T_waternormal_N;
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Water/T_WaterStream0002_2_D.T_WaterStream0002_2_D;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PhysicsVolume;/Engine/Transient.ActorFactoryBoxVolume_9
 RecentlyPlaced=/Game/StarterContent/Textures/T_Wood_Oak_D.T_Wood_Oak_D;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_Mat.T_Rock_Basalt_Mat;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_D.T_Rock_Basalt_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_Mat.T_Tech_Dot_Mat;
@@ -1220,15 +1226,15 @@ InstalledPlugins=XRVisualization
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMeshActor=
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.CustomPrimitiveData\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 MeshMergeCullingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SwimSphere_bp_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-StaticMeshComponent=
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
-Object=
+StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+Object="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 ShapeComponent=
 CharacterMovementComponent=
@@ -2311,6 +2317,8 @@ Actor_Blueprint_C=CableComponent.Collision.Collision,
 ThirdPersonExampleMap_C=
 Building_C=
 ThirdPersonGameMode_C=
+StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
