Added some things i forgot

--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,8 +134,8 @@ CameraSpeed=5
 
 [MRU]
 MRUItem0=/Game/ThirdPersonBP/Maps/Water
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/ThirdPersonBP/Maps/Building
+MRUItem1=/Game/ThirdPersonBP/Maps/Building
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem3=/Game/ThirdPersonBP/Maps/Mountain
 MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
 MRUItem5=/Game/ThirdPersonBP/Maps/Main
@@ -179,6 +179,7 @@ LastLevel=/Game/ThirdPersonBP/Maps/Water
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPersonBP/Maps/Water.Water:PersistentLevel.Water
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1197,11 +1198,17 @@ StaticMeshComponent.Mobile=True
 StaticMeshComponent.AssetUserData=True
 PostProcessVolume.LOD=False
 PostProcessVolume.Cooking=False
+Water_C.Tick=True
+Water_C.Replication=True
+Water_C.Actor=True
+Water_C.Input=True
+Water_C.Default=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Sandstone_D.T_Rock_Sandstone_D;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_Mat.T_Rock_Basalt_Mat;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Rock/T_Cave_Rock_Large02_M.T_Cave_Rock_Large02_M;
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Water/T_waternormal_Mat.T_waternormal_Mat;
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Water/T_WaterStream0002_2_Mat.T_WaterStream0002_2_Mat;
@@ -1218,7 +1225,6 @@ RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_Mat.T_Tech_Dot_Mat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Gradinet_01_Mat.T_Gradinet_01_Mat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Gradinet_01.T_Gradinet_01;
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -1226,8 +1232,8 @@ InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" "
-Brush="\"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.CustomPrimitiveData\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 MeshMergeCullingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SwimSphere_bp_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -1249,7 +1255,7 @@ DataAsset="\"Object.SkeletalMeshes\" "
 SkeletalMeshComponent=
 SkinnedMeshComponent=
 CapsuleComponent=
-PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" "
+PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
@@ -1263,15 +1269,15 @@ Info=
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Maps/Water
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/ThirdPersonBP/Blueprints/Respawn_bp
-MRUItem3=/Game/ThirdPersonBP/Blueprints/Swim_bp
-MRUItem4=/Game/ThirdPersonBP/Blueprints/Dash_bp
-MRUItem5=/Game/ThirdPersonBP/Blueprints/Grapple_bp
-MRUItem6=/Game/ThirdPersonBP/Blueprints/DJump_bp
-MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem9=/Game/ThirdPersonBP/Maps/Building
+MRUItem1=/Game/ThirdPersonBP/Maps/Building
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem3=/Game/ThirdPersonBP/Blueprints/Respawn_bp
+MRUItem4=/Game/ThirdPersonBP/Blueprints/Swim_bp
+MRUItem5=/Game/ThirdPersonBP/Blueprints/Dash_bp
+MRUItem6=/Game/ThirdPersonBP/Blueprints/Grapple_bp
+MRUItem7=/Game/ThirdPersonBP/Blueprints/DJump_bp
+MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem9=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
 MRUItem10=/Game/ThirdPersonBP/Maps/Mountain
 MRUItem11=/Game/ThirdPersonBP/Blueprints/Soul3
 MRUItem12=/Game/ThirdPersonBP/Maps/TutorialLvl
@@ -1301,6 +1307,7 @@ MRUItem19=/Game/StarterContent/Particles/Actor_Blueprint1
 /Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere=1
 /Game/StarterContent/Particles/Actor_Blueprint.Actor_Blueprint=1
 /Game/ThirdPersonBP/Blueprints/Respawn_bp.Respawn_bp=1
+/Game/ThirdPersonBP/Maps/Building.Building:PersistentLevel.Building=1
 
 [MaterialEditor]
 PrimType=1
@@ -2322,7 +2329,8 @@ ThirdPersonGameMode_C=
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 PostProcessVolume=PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|WhiteBalance,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation Volume,PostProcessVolume.Rendering Features.Rendering Features|Reflections,PostProcessVolume.Rendering Features.Rendering Features|Screen Space Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Rendering Features.Rendering Features|Misc,
-BrushComponent=
+BrushComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Water_C=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
